# config_guard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  example1.py  example2.py  example3.py  minimal_example.py
src/config_guard/: __init__.py  config.py  exceptions.py  history.py  hooks.py  integrity.py  locks.py  params.py  store.py  utils.py  validation.py
src/config_guard/params/: __init__.py  registry.py  spec.py
src/config_guard/store/: __init__.py  adaptors.py  manager.py
src/config_guard/validation/: __init__.py  base.py  protocol.py
tests/: conftest.py  test_appconfig.py  test_exceptions.py  test_hooks.py  test_integrity.py  test_locks.py  test_params.py  test_store.py  test_utils.py  test_validation.py
